--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
-      href="https://cdn.auth0.com/styleguide/components/1.0.8/media/logos/img/favicon.png"
+      href="./assets/favicon.ico"
     />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="https://cdn.auth0.com/js/auth0-samples-theme/1.0/css/auth0-theme.min.css"
     />
-    <title>Auth0 Angular Sample</title>
+    <title>GIS toolset</title>
     <base href="/" />
   </head>
   <body class="h-100">
